--- a/data_wrangling_json/sliderule_dsi_json_exercise.ipynb
+++ b/data_wrangling_json/sliderule_dsi_json_exercise.ipynb
@@ -162,8 +162,8 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>population</th>\n",
-       "      <th>shortname</th>\n",
        "      <th>state</th>\n",
+       "      <th>shortname</th>\n",
        "      <th>info.governor</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -172,40 +172,40 @@
        "      <th>0</th>\n",
        "      <td>Dade</td>\n",
        "      <td>12345</td>\n",
-       "      <td>FL</td>\n",
        "      <td>Florida</td>\n",
+       "      <td>FL</td>\n",
        "      <td>Rick Scott</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Broward</td>\n",
        "      <td>40000</td>\n",
-       "      <td>FL</td>\n",
        "      <td>Florida</td>\n",
+       "      <td>FL</td>\n",
        "      <td>Rick Scott</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Palm Beach</td>\n",
        "      <td>60000</td>\n",
-       "      <td>FL</td>\n",
        "      <td>Florida</td>\n",
+       "      <td>FL</td>\n",
        "      <td>Rick Scott</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Summit</td>\n",
        "      <td>1234</td>\n",
-       "      <td>OH</td>\n",
        "      <td>Ohio</td>\n",
+       "      <td>OH</td>\n",
        "      <td>John Kasich</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Cuyahoga</td>\n",
        "      <td>1337</td>\n",
-       "      <td>OH</td>\n",
        "      <td>Ohio</td>\n",
+       "      <td>OH</td>\n",
        "      <td>John Kasich</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -213,12 +213,12 @@
        "</div>"
       ],
       "text/plain": [
-       "         name  population shortname    state info.governor\n",
-       "0        Dade       12345        FL  Florida    Rick Scott\n",
-       "1     Broward       40000        FL  Florida    Rick Scott\n",
-       "2  Palm Beach       60000        FL  Florida    Rick Scott\n",
-       "3      Summit        1234        OH     Ohio   John Kasich\n",
-       "4    Cuyahoga        1337        OH     Ohio   John Kasich"
+       "         name  population    state shortname info.governor\n",
+       "0        Dade       12345  Florida        FL    Rick Scott\n",
+       "1     Broward       40000  Florida        FL    Rick Scott\n",
+       "2  Palm Beach       60000  Florida        FL    Rick Scott\n",
+       "3      Summit        1234     Ohio        OH   John Kasich\n",
+       "4    Cuyahoga        1337     Ohio        OH   John Kasich"
       ]
      },
      "execution_count": 5,
@@ -640,8 +640,8 @@
        "      <td>IBRD</td>\n",
        "      <td>Active</td>\n",
        "      <td>N</td>\n",
-       "      <td>{'Name': 'Education for all', 'Percent': 100}</td>\n",
-       "      <td>[{'name': 'Education for all', 'code': '65'}]</td>\n",
+       "      <td>{'Percent': 100, 'Name': 'Education for all'}</td>\n",
+       "      <td>[{'code': '65', 'name': 'Education for all'}]</td>\n",
        "      <td>65</td>\n",
        "      <td>130000000</td>\n",
        "      <td>130000000</td>\n",
@@ -664,8 +664,8 @@
        "      <td>IBRD</td>\n",
        "      <td>Active</td>\n",
        "      <td>N</td>\n",
-       "      <td>{'Name': 'Other economic management', 'Percent...</td>\n",
-       "      <td>[{'name': 'Other economic management', 'code':...</td>\n",
+       "      <td>{'Percent': 30, 'Name': 'Other economic manage...</td>\n",
+       "      <td>[{'code': '24', 'name': 'Other economic manage...</td>\n",
        "      <td>54,24</td>\n",
        "      <td>0</td>\n",
        "      <td>4700000</td>\n",
@@ -688,8 +688,8 @@
        "      <td>IBRD</td>\n",
        "      <td>Active</td>\n",
        "      <td>Y</td>\n",
-       "      <td>{'Name': 'Regional integration', 'Percent': 46}</td>\n",
-       "      <td>[{'name': 'Regional integration', 'code': '47'...</td>\n",
+       "      <td>{'Percent': 46, 'Name': 'Regional integration'}</td>\n",
+       "      <td>[{'code': '47', 'name': 'Regional integration'...</td>\n",
        "      <td>52,81,25,47</td>\n",
        "      <td>6060000</td>\n",
        "      <td>6060000</td>\n",
@@ -712,8 +712,8 @@
        "      <td>IBRD</td>\n",
        "      <td>Active</td>\n",
        "      <td>N</td>\n",
-       "      <td>{'Name': 'Participation and civic engagement',...</td>\n",
-       "      <td>[{'name': 'Participation and civic engagement'...</td>\n",
+       "      <td>{'Percent': 50, 'Name': 'Participation and civ...</td>\n",
+       "      <td>[{'code': '57', 'name': 'Participation and civ...</td>\n",
        "      <td>59,57</td>\n",
        "      <td>0</td>\n",
        "      <td>1500000</td>\n",
@@ -736,8 +736,8 @@
        "      <td>IBRD</td>\n",
        "      <td>Active</td>\n",
        "      <td>N</td>\n",
-       "      <td>{'Name': 'Export development and competitivene...</td>\n",
-       "      <td>[{'name': 'Export development and competitiven...</td>\n",
+       "      <td>{'Percent': 30, 'Name': 'Export development an...</td>\n",
+       "      <td>[{'code': '45', 'name': 'Export development an...</td>\n",
        "      <td>41,45</td>\n",
        "      <td>13100000</td>\n",
        "      <td>13100000</td>\n",
@@ -792,18 +792,18 @@
        "4  Active                     N   \n",
        "\n",
        "                                              theme1  \\\n",
-       "0      {'Name': 'Education for all', 'Percent': 100}   \n",
-       "1  {'Name': 'Other economic management', 'Percent...   \n",
-       "2    {'Name': 'Regional integration', 'Percent': 46}   \n",
-       "3  {'Name': 'Participation and civic engagement',...   \n",
-       "4  {'Name': 'Export development and competitivene...   \n",
+       "0      {'Percent': 100, 'Name': 'Education for all'}   \n",
+       "1  {'Percent': 30, 'Name': 'Other economic manage...   \n",
+       "2    {'Percent': 46, 'Name': 'Regional integration'}   \n",
+       "3  {'Percent': 50, 'Name': 'Participation and civ...   \n",
+       "4  {'Percent': 30, 'Name': 'Export development an...   \n",
        "\n",
        "                                      theme_namecode    themecode   totalamt  \\\n",
-       "0      [{'name': 'Education for all', 'code': '65'}]           65  130000000   \n",
-       "1  [{'name': 'Other economic management', 'code':...        54,24          0   \n",
-       "2  [{'name': 'Regional integration', 'code': '47'...  52,81,25,47    6060000   \n",
-       "3  [{'name': 'Participation and civic engagement'...        59,57          0   \n",
-       "4  [{'name': 'Export development and competitiven...        41,45   13100000   \n",
+       "0      [{'code': '65', 'name': 'Education for all'}]           65  130000000   \n",
+       "1  [{'code': '24', 'name': 'Other economic manage...        54,24          0   \n",
+       "2  [{'code': '47', 'name': 'Regional integration'...  52,81,25,47    6060000   \n",
+       "3  [{'code': '57', 'name': 'Participation and civ...        59,57          0   \n",
+       "4  [{'code': '45', 'name': 'Export development an...        41,45   13100000   \n",
        "\n",
        "  totalcommamt                                                url  \n",
        "0    130000000  http://www.worldbank.org/projects/P129828/ethi...  \n",
@@ -1017,7 +1017,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 500 entries, 0 to 499\n",
+      "Int64Index: 500 entries, 0 to 499\n",
       "Data columns (total 50 columns):\n",
       "_id                         500 non-null object\n",
       "approvalfy                  500 non-null int64\n",
@@ -1070,7 +1070,7 @@
       "totalcommamt                500 non-null int64\n",
       "url                         500 non-null object\n",
       "dtypes: int64(7), object(43)\n",
-      "memory usage: 195.4+ KB\n"
+      "memory usage: 199.2+ KB\n"
      ]
     }
    ],
@@ -1103,11 +1103,11 @@
        "Socialist Republic of Vietnam      17\n",
        "Republic of India                  16\n",
        "Republic of Yemen                  13\n",
-       "Kingdom of Morocco                 12\n",
        "People's Republic of Bangladesh    12\n",
+       "Kingdom of Morocco                 12\n",
        "Nepal                              12\n",
-       "Republic of Mozambique             11\n",
        "Africa                             11\n",
+       "Republic of Mozambique             11\n",
        "Name: countryname, dtype: int64"
       ]
      },
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1151,7 +1151,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1348,7 +1348,7 @@
        "24    8  Human development"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,9 +1365,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1379,7 +1379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
