--- a/Capstone/DataStory.ipynb
+++ b/Capstone/DataStory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +89,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -273,12 +273,12 @@
        "      <td>Commercial Service Representative</td>\n",
        "      <td>Full Time</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>74584.48</td>\n",
-       "      <td>369.12</td>\n",
-       "      <td>13904.79</td>\n",
+       "      <td>$74584.48</td>\n",
+       "      <td>$369.12</td>\n",
+       "      <td>$13904.79</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>18124.69</td>\n",
+       "      <td>$18124.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -288,13 +288,13 @@
        "      <td>432728338</td>\n",
        "      <td>Police Officer I</td>\n",
        "      <td>Full Time</td>\n",
-       "      <td>25.12</td>\n",
-       "      <td>51207.45</td>\n",
-       "      <td>11.13</td>\n",
-       "      <td>1689.27</td>\n",
+       "      <td>$25.12</td>\n",
+       "      <td>$51207.45</td>\n",
+       "      <td>$11.13</td>\n",
+       "      <td>$1689.27</td>\n",
        "      <td>24</td>\n",
        "      <td>POLICE OFFICERS UNIT</td>\n",
-       "      <td>12740.52</td>\n",
+       "      <td>$12740.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -304,13 +304,13 @@
        "      <td>97182506</td>\n",
        "      <td>Police Officer II</td>\n",
        "      <td>Full Time</td>\n",
-       "      <td>42.77</td>\n",
-       "      <td>89029.61</td>\n",
-       "      <td>482.29</td>\n",
-       "      <td>3637.91</td>\n",
+       "      <td>$42.77</td>\n",
+       "      <td>$89029.61</td>\n",
+       "      <td>$482.29</td>\n",
+       "      <td>$3637.91</td>\n",
        "      <td>24</td>\n",
        "      <td>POLICE OFFICERS UNIT</td>\n",
-       "      <td>12740.52</td>\n",
+       "      <td>$12740.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -320,13 +320,13 @@
        "      <td>950136941</td>\n",
        "      <td>Senior Security Officer</td>\n",
        "      <td>Full Time</td>\n",
-       "      <td>28.75</td>\n",
-       "      <td>71936.24</td>\n",
-       "      <td>11504.72</td>\n",
-       "      <td>2770.72</td>\n",
+       "      <td>$28.75</td>\n",
+       "      <td>$71936.24</td>\n",
+       "      <td>$11504.72</td>\n",
+       "      <td>$2770.72</td>\n",
        "      <td>12</td>\n",
        "      <td>SUPV BLUE COLLAR</td>\n",
-       "      <td>11126.88</td>\n",
+       "      <td>$11126.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -336,13 +336,13 @@
        "      <td>3230003445</td>\n",
        "      <td>Senior Clerk Typist</td>\n",
        "      <td>Full Time</td>\n",
-       "      <td>30.92</td>\n",
-       "      <td>64583.37</td>\n",
-       "      <td>417.37</td>\n",
-       "      <td>4774.25</td>\n",
+       "      <td>$30.92</td>\n",
+       "      <td>$64583.37</td>\n",
+       "      <td>$417.37</td>\n",
+       "      <td>$4774.25</td>\n",
        "      <td>03</td>\n",
        "      <td>CLERICAL UNIT</td>\n",
-       "      <td>11421.48</td>\n",
+       "      <td>$11421.48</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -356,29 +356,29 @@
        "3   14136  2013        Harbor (Port of LA)     950136941   \n",
        "4   91896  2014  Public Works - Sanitation    3230003445   \n",
        "\n",
-       "                     Job Class Title Employment Type  Hourly or Event Rate  \\\n",
-       "0  Commercial Service Representative       Full Time                   NaN   \n",
-       "1                   Police Officer I       Full Time                 25.12   \n",
-       "2                  Police Officer II       Full Time                 42.77   \n",
-       "3            Senior Security Officer       Full Time                 28.75   \n",
-       "4                Senior Clerk Typist       Full Time                 30.92   \n",
+       "                     Job Class Title Employment Type Hourly or Event Rate  \\\n",
+       "0  Commercial Service Representative       Full Time                  NaN   \n",
+       "1                   Police Officer I       Full Time               $25.12   \n",
+       "2                  Police Officer II       Full Time               $42.77   \n",
+       "3            Senior Security Officer       Full Time               $28.75   \n",
+       "4                Senior Clerk Typist       Full Time               $30.92   \n",
        "\n",
-       "   Total Payments  Overtime Pay  Other Pay (Payroll Explorer)  MOU  \\\n",
-       "0        74584.48        369.12                      13904.79  NaN   \n",
-       "1        51207.45         11.13                       1689.27   24   \n",
-       "2        89029.61        482.29                       3637.91   24   \n",
-       "3        71936.24      11504.72                       2770.72   12   \n",
-       "4        64583.37        417.37                       4774.25   03   \n",
+       "  Total Payments Overtime Pay Other Pay (Payroll Explorer)  MOU  \\\n",
+       "0      $74584.48      $369.12                    $13904.79  NaN   \n",
+       "1      $51207.45       $11.13                     $1689.27   24   \n",
+       "2      $89029.61      $482.29                     $3637.91   24   \n",
+       "3      $71936.24    $11504.72                     $2770.72   12   \n",
+       "4      $64583.37      $417.37                     $4774.25   03   \n",
        "\n",
-       "              MOU Title  Average Benefit Cost  \n",
-       "0                   NaN              18124.69  \n",
-       "1  POLICE OFFICERS UNIT              12740.52  \n",
-       "2  POLICE OFFICERS UNIT              12740.52  \n",
-       "3      SUPV BLUE COLLAR              11126.88  \n",
-       "4         CLERICAL UNIT              11421.48  "
+       "              MOU Title Average Benefit Cost  \n",
+       "0                   NaN            $18124.69  \n",
+       "1  POLICE OFFICERS UNIT            $12740.52  \n",
+       "2  POLICE OFFICERS UNIT            $12740.52  \n",
+       "3      SUPV BLUE COLLAR            $11126.88  \n",
+       "4         CLERICAL UNIT            $11421.48  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -401,26 +401,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "Can only use .str accessor with string values, which use np.object_ dtype in pandas",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-111-fdc231b984b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m# Removing the $ character so that the type can be converted to numeric for further statistical anaslysis\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mla\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Hourly or Event Rate'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mla\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Hourly or Event Rate'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'$'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mla\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Total Payments'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mla\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Total Payments'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'$'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mla\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Overtime Pay'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mla\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Overtime Pay'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'$'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mla\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Other Pay (Payroll Explorer)'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mla\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Other Pay (Payroll Explorer)'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'$'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Program Files\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   2738\u001b[0m         if (name in self._internal_names_set or name in self._metadata or\n\u001b[1;32m   2739\u001b[0m                 name in self._accessors):\n\u001b[0;32m-> 2740\u001b[0;31m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2741\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   2742\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Program Files\\Anaconda3\\lib\\site-packages\\pandas\\core\\base.py\u001b[0m in \u001b[0;36m__get__\u001b[0;34m(self, instance, owner)\u001b[0m\n\u001b[1;32m    239\u001b[0m             \u001b[1;31m# this ensures that Series.str.<method> is well defined\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    240\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maccessor_cls\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 241\u001b[0;31m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstruct_accessor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    242\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    243\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__set__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minstance\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Program Files\\Anaconda3\\lib\\site-packages\\pandas\\core\\strings.py\u001b[0m in \u001b[0;36m_make_str_accessor\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1839\u001b[0m             \u001b[1;31m# (instead of test for object dtype), but that isn't practical for\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1840\u001b[0m             \u001b[1;31m# performance reasons until we have a str dtype (GH 9343)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1841\u001b[0;31m             raise AttributeError(\"Can only use .str accessor with string \"\n\u001b[0m\u001b[1;32m   1842\u001b[0m                                  \u001b[1;34m\"values, which use np.object_ dtype in \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1843\u001b[0m                                  \"pandas\")\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Can only use .str accessor with string values, which use np.object_ dtype in pandas"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Removing the $ character so that the type can be converted to numeric for further statistical anaslysis\n",
     "la['Hourly or Event Rate'] = la['Hourly or Event Rate'].str.lstrip('$')\n",
@@ -432,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -449,18 +434,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Row ID                            int64\n",
+       "Year                              int64\n",
+       "Department Title                 object\n",
+       "Record Number                    object\n",
+       "Job Class Title                  object\n",
+       "Employment Type                  object\n",
+       "Hourly or Event Rate            float64\n",
+       "Total Payments                  float64\n",
+       "Overtime Pay                    float64\n",
+       "Other Pay (Payroll Explorer)    float64\n",
+       "MOU                              object\n",
+       "MOU Title                        object\n",
+       "Average Benefit Cost            float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "la.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -589,7 +598,7 @@
        "max    311315.620000                 435621.770000          19392.620000  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -733,7 +742,7 @@
        "4    NaN  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -759,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -781,7 +790,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -921,7 +930,7 @@
        "max     96570.660000  567595.430000    2014.000000  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
