--- a/data_wrangling_json/sliderule_dsi_json_exercise.ipynb
+++ b/data_wrangling_json/sliderule_dsi_json_exercise.ipynb
@@ -1365,7 +1365,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
