--- a/Capstone/DataStory-SF-Viz.ipynb
+++ b/Capstone/DataStory-SF-Viz.ipynb
@@ -89,19 +89,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Submission Requirements: \n",
-    "    \n",
-    "Submit links to a Github repository containing a Jupyter notebook. The notebook should contain:\n",
-    "\n",
-    "* The questions you asked\n",
-    "* The trends you investigated\n",
-    "* The resulting visualizations and conclusions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -320,18 +307,6 @@
    ],
    "source": [
     "sf.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Questions\n",
-    "\n",
-    "* How many employees does San Francisco employ?\n",
-    "* What are the job titles of these employees?\n",
-    "* How much on average does SF pay?\n",
-    "* San Francisco payroll, as well as California, in general have a much higher payroll than other cities of similar size, is there a reason why?"
    ]
   },
   {
@@ -1790,6 +1765,29 @@
    },
    "source": [
     "In the above table we can see the total, mean and count of Total Paid per Department"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-447a25c22497>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "plt.scatter()"
    ]
   },
   {
