--- a/Capstone/README.nd
+++ b/Capstone/README.nd
@@ -1,1 +1,3 @@
 # Test
+
+### This is an acrticle about California's pay: https://www.nytimes.com/2017/03/02/us/california-today-police-firefighter-pay.html
