--- a/Capstone/README.nd
+++ b/Capstone/README.nd
@@ -1,3 +1,8 @@
 # Test
 
-### This is an acrticle about California's pay: https://www.nytimes.com/2017/03/02/us/california-today-police-firefighter-pay.html
+### This is an acrticle about California's pay: 
+https://www.nytimes.com/2017/03/02/us/california-today-police-firefighter-pay.html
+<br>
+### Look at this for ideas:
+https://www.kaggle.com/mevanoff24/data-exploration-predicting-salaries
+<br>
